# intelligent-search

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
src/intelligent_search/: __main__.py  config.py  main.py  telemetry.py
src/intelligent_search/agent/: graph.py  model.py  state.py  tools.py
src/intelligent_search/api/: dependencies.py  router.py  tags_router.py
src/intelligent_search/application/: search_service.py
src/intelligent_search/domain/: models.py
src/intelligent_search/infrastructure/: company_search_repository.py  tag_repository.py
src/intelligent_search/resources/prompts/: search_prompt.txt
tests/: test_api.py  test_search_service.py
