[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # third-party libs (langchain, langgraph) have no stubs
explicit_package_bases = true
mypy_path = "src"
