[metadata]
name = intelligent-search
version = 1.0.0
python_requires = >=3.12

[options]
packages = find:
package_dir = = src
install_requires =
    fastapi
    uvicorn[standard]
    pydantic-settings
    httpx
    langchain-ollama
    langchain-community
    langchain-core
    langgraph
    loguru
    tenacity

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-random-order
    pytest-watch
    pytest-testmon
    httpx
    respx
    assertpy
    ruff
    mypy
    bandit
    radon
    xenon
    flake8
    autoflake

[tool:pytest]
asyncio_mode = auto
testpaths = tests
addopts = --verbose
norecursedirs =
    .git
    .tox
    dist
    build
    __pycache__

[flake8]
max_line_length = 120

[isort]
profile = black
line_length = 120
